--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <div class="header">
-        <a href="" class="header1">Header Logo</a>
-        <a href="" class="header2">header link one</a> 
-        <a href="" class="header2">header link two</a> 
-        <a href="" class="header2">header link three</a>              
-    </div>
+        <ul class="left-links">
+          <li><a href="#">Header Logo</a></li>
+        </ul>
+        <ul class="right-links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </div>
     <div class="container_1">
         <h3 class="h3_c1">This website is awesome</h3>
         <p class="p_c1">This website has some subtext that goes under the main tittle. It's smaller font and the color is lower contrast.</p>
