Added image and updates to header logo

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </ul>
       </div>
     <div class="container_1">
-        <h3 class="h3_c1">This website is awesome</h3>
-        <p class="p_c1">This website has some subtext that goes under the main tittle. It's smaller font and the color is lower contrast.</p>
+        <p class="p_header">This website is awesome</p>
+        <p class="p_secondary">This website has some subtext that goes under the main tittle. It's smaller font and the color is lower contrast.</p>
         <button class="b_c1">Sign up</button>
-        <img src="" alt="This is a placeholder for an image">
+        <img src="img/computer.jpg" alt="This is a placeholder for an image" style="width:400px;">
     </div>
     <div class="container_2">
         <h4>Some random information</h4>
