Added css for container 1

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         </ul>
       </div>
     <div class="container_1">
+        <div class="c1_left">
         <p class="p_header">This website is awesome</p>
         <p class="p_secondary">This website has some subtext that goes under the main tittle. It's smaller font and the color is lower contrast.</p>
         <button class="b_c1">Sign up</button>
-        <img src="img/computer.jpg" alt="This is a placeholder for an image" style="width:400px;">
+        </div>
+        <div class="c1_right">
+            <img src="img/computer.jpg" alt="This is a placeholder for an image" style="width:400px;">
+        </div>
     </div>
     <div class="container_2">
         <h4>Some random information</h4>
