Added css to container 1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="b_c1">Sign up</button>
         </div>
         <div class="c1_right">
-            <img src="img/computer.jpg" alt="This is a placeholder for an image" style="width:400px;">
+            <img src="img/computer.jpg" class="img" alt="This is a placeholder for an image">
         </div>
     </div>
     <div class="container_2">
