--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Landing Page</title>
 </head>
 <body>
     <div class="header">
@@ -25,27 +25,29 @@
         <button class="b_c1">Sign up</button>
         </div>
         <div class="c1_right">
-            <img src="img/computer.jpg" class="img" alt="This is a placeholder for an image">
+            <img src="img/cat2.png" class="img" alt="This is a placeholder for an image">
         </div>
     </div>
     <div class="container_2">
-        <h4>Some random information</h4>
+        <p class="c2_title">Some random information</p>
+        <div class="cards">
         <div class="card">
-            <img src="" alt="Image">
+            <img src="img/cat.png" class="img2" alt="Image">
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-            <img src="" alt="Image">
+            <img src="img/cat.png" class="img2" alt="Image">
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-            <img src="" alt="Image">
+            <img src="img/cat.png" class="img2" alt="Image">
             <p>This is some subtext under an illustration or image</p>
         </div>
         <div class="card">
-            <img src="" alt="Image">
+            <img src="img/cat.png" class="img2" alt="Image">
             <p>This is some subtext under an illustration or image</p>
         </div>
+    </div>
     </div>
     <div class="container_3">
         <p>This is an inspiring quote, or a testimonial from a customer. 
