--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     </div>
     </div>
     <div class="container_3">
-        <p>This is an inspiring quote, or a testimonial from a customer. 
+        <p class="c3_quote">This is an inspiring quote, or a testimonial from a customer. 
             Maybe it's just filling up space, or maybe people will actually read it.
             Who knows? All I know is that it looks nice.
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p class="c3_author">-Thor, God of Thunder</p>
     </div>
     <div class="container_4">
         <div>
