--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
     </div>
     </div>
     <div class="container_3">
-        <p class="c3_quote">This is an inspiring quote, or a testimonial from a customer. 
-            Maybe it's just filling up space, or maybe people will actually read it.
-            Who knows? All I know is that it looks nice.
-        </p>
-        <p class="c3_author">-Thor, God of Thunder</p>
+        <div class="quote">
+            <div class="c3_quote">This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.
+            </div>
+            <div class="c3_author">-Thor, God of Thunder</div>
+
+        </div>
+
     </div>
     <div class="container_4">
         <div class="call2action">
