--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="footer">
-        <div>Copyright © The Odin Project 2024</div>
+        <div class="footer_msg">Copyright © The Odin Project 2024</div>
     </div>
     
 </body>
